2004-11-01  Jan Schmidt  <thaytan@mad.scientist.com>
	* ext/esd/esdsink.c: (gst_esdsink_class_init),
	(gst_esdsink_finalize):
	Use a finalize function, not dispose, and more importantly,
	call the parent class finalize function too

2004-11-01  Johan Dahlin  <johan@gnome.org>

	* ext/ogg/gstoggdemux.c:
	* gst/tags/gstvorbistag.c:
	Plug leaks.

2004-10-31  Benjamin Otte  <otte@gnome.org>

	* gst/tags/gstvorbistag.c: (gst_vorbis_tag_chain):
	  lotsa memleaks today. But they're all small...

2004-10-31  Benjamin Otte  <otte@gnome.org>

	* ext/ogg/gstoggdemux.c: (gst_ogg_pad_push):
	  another memleak crushed

2004-10-31  Benjamin Otte  <otte@gnome.org>

	* gst/tags/gstvorbistag.c: (gst_tag_to_vorbis_comments):
	  fix memleak

2004-10-31  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* ext/ogg/gstoggdemux.c: (gst_ogg_pad_push):
	  Hack to prevent crash when going to READY inside signal handler
	  while this function is active.

2004-10-31  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* gst/ffmpegcolorspace/Makefile.am:
	* gst/ffmpegcolorspace/avcodec.h:
	* gst/ffmpegcolorspace/common.h:
	* gst/ffmpegcolorspace/dsputil.c: (dsputil_static_init):
	* gst/ffmpegcolorspace/dsputil.h:
	* gst/ffmpegcolorspace/gstffmpeg.c: (plugin_init):
	* gst/ffmpegcolorspace/gstffmpegcodecmap.c:
	(gst_ffmpeg_get_palette), (gst_ffmpeg_set_palette),
	(gst_ffmpeg_pixfmt_to_caps), (gst_ffmpeg_smpfmt_to_caps),
	(gst_ffmpegcsp_codectype_to_caps), (gst_ffmpeg_caps_to_smpfmt),
	(gst_ffmpeg_caps_to_pixfmt), (gst_ffmpegcsp_caps_with_codectype),
	(gst_ffmpegcsp_avpicture_fill):
	* gst/ffmpegcolorspace/gstffmpegcodecmap.h:
	* gst/ffmpegcolorspace/gstffmpegcolorspace.c:
	(gst_ffmpegcsp_caps_remove_format_info), (gst_ffmpegcsp_getcaps),
	(gst_ffmpegcsp_pad_link), (gst_ffmpegcsp_get_type),
	(gst_ffmpegcsp_base_init), (gst_ffmpegcsp_class_init),
	(gst_ffmpegcsp_init), (gst_ffmpegcsp_chain),
	(gst_ffmpegcsp_change_state), (gst_ffmpegcsp_set_property),